# zephyr

./: CMakeLists.txt  Kconfig.zephyr  west.yml
boards/arm/nrf52832_strzelnica/: Kconfig  Kconfig.board  Kconfig.defconfig  nrf52832_strzelnica.dts  nrf52832_strzelnica.yaml  nrf52832_strzelnica_defconfig
boards/arm/nrf5340dk_nrf5340/: Kconfig
boards/arm/reel_board/: board.c  reel_board.dts
doc/api/: power_management_api.rst
doc/reference/shell/: index.rst
doc/subsystems/: power_management.rst
drivers/adc/: CMakeLists.txt  Kconfig.nrfx  adc_nrfy_saadc.c
drivers/display/: ssd1673.c
drivers/i2c/: i2c_nrfx_twim.c
drivers/sensor/hdc1008/: hdc1008.c
drivers/sensor/qdec_nrfx/: qdec_nrfx.c
drivers/serial/: uart_nrfx_uarte.c
drivers/spi/: spi_nrfx_spim.c
drivers/timer/: CMakeLists.txt  Kconfig  nrf_rtc_timer.c
dts/bindings/power/: nordic,nrf-pmgt-consumer.yaml  nordic,nrf-pmgt-mode-req.yaml  nordic,nrf-pmgt-rail.yaml  nordic,nrf-pmgt-reg-out.yaml  nordic,nrf-pmgt-reg.yaml
include/: power.h
include/pm/: pm.h
include/pm/pcm/: algorithm.h  scheduler.h
include/pm/time/: time.h
include/shell/: shell.h  shell_getopt.h
kernel/: idle.c
modules/: Kconfig  Kconfig.nrfs
samples/sysctrl/: CMakeLists.txt  app.overlay  prj.conf  prj_release.conf
samples/sysctrl/src/modules/messaging/test/filter/: CMakeLists.txt  prj.conf  sample.yaml  testcase.yaml
samples/sysctrl/src/modules/messaging/test/filter/src/: test_filter.c
samples/sysctrl_local_domain/: main.c  prj.conf
scripts/dts/: gen_defines.py
scripts/unity/: header_prepare.py
subsys/: CMakeLists.txt  Kconfig
subsys/event_manager/: event_manager.c  event_manager_priv.h
subsys/power/: pm_ctrl.c  power.c
subsys/shell/: Kconfig  shell.c  shell_getopt.c
tests/unity/: CMakeLists.txt  Kconfig
tests/unity/shell_test/: CMakeLists.txt  prj.conf  sample.yaml  testcase.yaml
tests/unity/shell_test/src/: test_shell.c
(+155 files in other folders)
